--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,12 +1,9 @@
-// @import 'bootstrap/scss/bootstrap.scss';
-
 body {
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-color:black;
-
+  background-color: black;
 }
 
 #quote-box {
@@ -44,10 +41,9 @@ body {
   font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
-
-  &:hover {
-    background-color: #bb1818;
-  }
+}
+#new-quote:hover {
+  background-color: #bb1818;
 }
 
 #tweet-quote {
@@ -61,8 +57,7 @@ body {
   display: inline-block;
   cursor: pointer;
   transition: background-color 0.3s ease;
-
-  &:hover {
-    background-color: #bb1818;
-  }
 }
+#tweet-quote:hover {
+  background-color: #bb1818;
+}/*# sourceMappingURL=styles.css.map */
